# opensettings

./: .gitignore  README  configure.ac
src/: Makefile.am
src/datetime/: .gitignore  Makefile.am  Makefile.in  datetime-ataraxia.c  datetime-ataraxia.h  datetime-devuan.c  datetime-main.c  datetime.c  datetime.xml  org.opensettings.DateTimeMechanism.conf  org.opensettings.DateTimeMechanism.desktop.in  org.opensettings.DateTimeMechanism.service.in  org.opensettings.datetimemechanism.policy.in  system-timezone.c
src/hostname/: .gitignore  Makefile.am  common.c  common.h  main.c  org.freedesktop.hostname1.desktop.in  org.freedesktop.hostname1.policy.in  org.freedesktop.hostname1.service  org.freedesktop.hostname1.service.in
